--- a/public/index.html
+++ b/public/index.html
@@ -19,6 +19,12 @@
       src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"
     ></script>
 
+    <!--Google Fonts -->
+    <link
+      href="https://fonts.googleapis.com/css2?family=Black+Ops+One&family=Montserrat&family=Red+Rose&display=swap"
+      rel="stylesheet"
+    />
+
     <!-- Font Awesome CDN -->
     <link
       rel="stylesheet"
